--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.ural.GUI</mainClass>
+                            <mainClass>com.ural.gui.init.InitWindow</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -56,6 +56,17 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.18.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>22.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>22.0.2</version>
         </dependency>
     </dependencies>
 </project>
