changing the project structure and adding the main window

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.ural.gui.init.InitWindow</mainClass>
+                            <mainClass>com.ural.com.ural.MainApp</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
